--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,57 @@ services:
     networks:
       - vpnoy-network
 
+  vpnoy-cloud:
+    container_name: vpnoy-cloud
+    image: owncloud/server
+    restart: always
+    depends_on:
+      - vpnoy-cloud-db
+      - vpnoy-cloud-redis
+    environment:
+      - OWNCLOUD_DOMAIN=${OWNCLOUD_DOMAIN}
+      - OWNCLOUD_DB_TYPE=mysql
+      - OWNCLOUD_DB_NAME=vpnoy-cloud-db
+      - OWNCLOUD_DB_USERNAME=admin
+      - OWNCLOUD_DB_PASSWORD=Ns3txMLVJ61u8eoB
+      - OWNCLOUD_DB_HOST=vpnoy-cloud-db
+      - OWNCLOUD_ADMIN_USERNAME=admin
+      - OWNCLOUD_ADMIN_PASSWORD=Xhw2M1QgDazXy20H
+      - OWNCLOUD_MYSQL_UTF8MB4=true
+      - OWNCLOUD_REDIS_ENABLED=true
+      - OWNCLOUD_REDIS_HOST=vpnoy-cloud-redis
+    volumes:
+      - ./files:/mnt/data
+    networks:
+      - vpnoy-network
+
+  vpnoy-cloud-db:
+    container_name: vpnoy-cloud-db
+    image: webhippie/mariadb:latest
+    restart: always
+    environment:
+      - MARIADB_ROOT_PASSWORD=fOwP06erFGcNjGCO
+      - MARIADB_USERNAME=admin
+      - MARIADB_PASSWORD=Ns3txMLVJ61u8eoB
+      - MARIADB_DATABASE=vpnoy-cloud-db
+      - MARIADB_MAX_ALLOWED_PACKET=128M
+      - MARIADB_INNODB_LOG_FILE_SIZE=64M
+    volumes:
+      - ./mysql:/var/lib/mysql
+      - ./backup:/var/lib/backup
+    networks:
+      - vpnoy-network
+
+  vpnoy-cloud-redis:
+    container_name: vpnoy-cloud-redis
+    image: webhippie/redis:latest
+    restart: always
+    environment:
+      - REDIS_DATABASES=1
+    volumes:
+      - ./redis:/var/lib/redis
+    networks:
+      - vpnoy-network
 networks:
   vpnoy-network:
     external:
