--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     volumes:
       - $PWD/data:/etc/openvpn
     networks:
-      - vpnoy-network
+      vpnoy-network:
+        ipv4_address: 172.19.0.2
 
   vpnoy-cloud:
     container_name: vpnoy-cloud
@@ -35,7 +36,8 @@ services:
     volumes:
       - ./files:/mnt/data
     networks:
-      - vpnoy-network
+      vpnoy-network:
+        ipv4_address: 172.19.0.3
 
   vpnoy-cloud-db:
     container_name: vpnoy-cloud-db
@@ -52,7 +54,8 @@ services:
       - ./mysql:/var/lib/mysql
       - ./backup:/var/lib/backup
     networks:
-      - vpnoy-network
+      vpnoy-network:
+        ipv4_address: 172.19.0.4
 
   vpnoy-cloud-redis:
     container_name: vpnoy-cloud-redis
@@ -63,7 +66,9 @@ services:
     volumes:
       - ./redis:/var/lib/redis
     networks:
-      - vpnoy-network
+      vpnoy-network:
+        ipv4_address: 172.19.0.5
+
 networks:
   vpnoy-network:
     external:
